docs: swagger of user/vet actions
